Use fix instead of absolute for bottom stuck.

--- a/client/www/css/mobile/main.less
+++ b/client/www/css/mobile/main.less
@@ -143,7 +143,7 @@ a:hover, a:active, a:focus, a.icon:hover, a.icon:active, a.icon:focus {
     min-height: 100%;
 }
 .bottom.stuck {
-    position: absolute;
+    position: fixed;
     bottom: 0;
 
     .basic.button {
